# 3D_CT_Reconstruction_using_cpp

./: .gitignore  CMakeLists.txt  README.md  ct_reconstruction.cpp  setup.sh
